fix: add inputMode for numeric keyboard on mobile

--- a/src/components/OrderInput/OrderInput.module.scss
+++ b/src/components/OrderInput/OrderInput.module.scss
@@ -5,6 +5,15 @@
     padding: 0.3em 0.6em;
     width: auto;
     min-width: 3ch;
+    &::-webkit-outer-spin-button,
+    &::-webkit-inner-spin-button {
+      -webkit-appearance: none;
+      margin: 0;
+    }
+
+    &[type=number] {
+      -moz-appearance: textfield;
+    } 
   }
   .hint {
     visibility: hidden;
